# rust-xxd

./: Cargo.toml  README.md
src/: hex.rs  main.rs
src/tests/: mod.rs
