[package]
name = "xxd-clone"
version = "0.1.0"
edition = "2021"
authors = ["Raj Peshavariya <rajpeshavariya@yahoo.com>"]
description = "An implementation of UNIX command xxd in Rust."
readme = "README.md"
repository = "https://github.com/raj-p26/rust-xxd"
license = "Apache-2.0"

[[bin]]
name = "xxd_rs"
path = "src/main.rs"
doctest = true

[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
colored = "2.1.0"
regex = "1.10.5"
